@@ -255,305 +255,7 @@ fi
 
 # Checks for typedefs, structures, and compiler characteristics.
 CHECK_COMPILER_FLAG(O2, [], [ CFLAGS=`echo $CFLAGS | sed -e "s/-O2//g"` ])
-CHECK_COMPILER_FLAG(fwhole-program, [
-	# check first, because it triggerts the gcc optimizer system header
-	# troubles on ubuntu 10.04 and 11.04 more easily.  Also if it works
-	# on its own this is optimized.
-	ACX_CHECK_FLTO
-	# check if it really works
-	AC_MSG_CHECKING([if -combine and system headers work (u10.04)])
-[
-cat >conftest1.c <<EOF 
-#include <string.h>
-#include <stdio.h>
-#include <errno.h>
-
-struct nsd {
-	char* pidfile;
-	unsigned long pid;
-};
-
-static struct nsd nsd;
-
-void log_msg(int x, char* s, ...) { }
-
-int write_data(FILE* f, char* buf, size_t len) { }
-
-int writepid(struct nsd *nsd) {
-	FILE * fd;
-	char pidbuf[32];
-
-	memset(&fd, 0, sizeof(fd));
-
-	if ((fd = fopen(nsd->pidfile, "w")) ==  NULL ) {
-		log_msg(1, "cannot open pidfile %s: %s",
-			nsd->pidfile, strerror(errno));
-		return -1;
-	}
-
-	if (!write_data(fd, pidbuf, strlen(pidbuf))) {
-		log_msg(1, "cannot write pidfile %s: %s",
-			nsd->pidfile, strerror(errno));
-		fclose(fd);
-		return -1;
-	}
-	fclose(fd);
-
-	return 0;
-}
-
-int main(void)
-{
-	return writepid(&nsd);
-}
-EOF
-cat >conftest2.c <<EOF
-#include <string.h>
-#include <stdio.h>
-EOF
-]
-	if $CC $CFLAGS -o conftest.out -combine -fwhole-program conftest1.c conftest2.c >/dev/null 2>&1; then
-		AC_MSG_RESULT(yes)
-		AC_MSG_CHECKING([if -combine and system headers work (u11.04)])
-[
-cat >conftest1.c <<EOF
-#include <inttypes.h>
-#include <string.h>
-#include <stdlib.h>
-
-void *xalloc(size_t size) { return malloc(size); }
-struct region;
-struct region *region_create(void *(*allocator)(size_t),
-	void (*deallocator)(void *))
-{ (void)allocator; (void)deallocator; return (struct region*)malloc(10); }
-struct udb_base;
-struct udb_ptr;
-#define NSEC3_HASH_LEN 20
-int udb_zone_lookup_hash_wc(struct udb_base* udb, struct udb_ptr* zone,
-	const uint8_t* nm, size_t nmlen, uint8_t hash[NSEC3_HASH_LEN],
-        uint8_t wchash[NSEC3_HASH_LEN]);
-struct dname { uint8_t name_size, label_count; };
-const struct dname *dname_parse(struct region *region, const char *name);
-const struct dname *dname_concatenate(struct region *region,
-	const struct dname *left, const struct dname *right);
-static inline const uint8_t *
-dname_name(const struct dname *dname)
-{
-        return (const uint8_t *) ((const char *) dname + sizeof(struct dname)
-		+ dname->label_count * sizeof(uint8_t));
-}
-struct radnode;
-struct radtree;
-struct domain { struct dname* dname; 
-        uint8_t nsec3_hash[NSEC3_HASH_LEN];
-        uint8_t nsec3_wc_hash[NSEC3_HASH_LEN];
-        uint8_t nsec3_ds_parent_hash[NSEC3_HASH_LEN];
-        unsigned  have_nsec3_hash : 1;
-        unsigned  have_nsec3_wc_hash : 1;
-        unsigned  have_nsec3_ds_parent_hash : 1;
-} ;
-struct zone;
-struct namedb { struct udb_base* udb; } ;
-static inline const struct dname *
-domain_dname(struct domain *domain)
-{
-        return domain->dname;
-}
-
-void nsec3_hash_and_store(struct zone* zone, const struct dname* dname,
-        uint8_t* store);
-
-#define STORE_HASH(x,y) memmove(domain->x,y,NSEC3_HASH_LEN); domain->have_##x =1;
-
-static void
-nsec3_lookup_hash_and_wc(struct namedb* db, struct zone* zone,
-	struct udb_ptr* z, const struct dname* dname, struct domain* domain)
-{
-	uint8_t h[NSEC3_HASH_LEN], h_wc[NSEC3_HASH_LEN];
-	const struct dname* wcard;
-	if(domain->have_nsec3_hash && domain->have_nsec3_wc_hash) {
-		return;
-	}
-	if( udb_zone_lookup_hash_wc(db->udb, z, dname_name(dname),
-		dname->name_size, h, h_wc)) {
-		STORE_HASH(nsec3_hash, h);
-		STORE_HASH(nsec3_wc_hash, h_wc);
-		return;
-	}
-	nsec3_hash_and_store(zone, dname, domain->nsec3_hash);
-	struct region* region = region_create(xalloc, free);
-	wcard = dname_parse(region, "*");
-	wcard = dname_concatenate(region, wcard, dname);
-}
-
-void nsec3_precompile_domain(struct namedb* db, struct domain* domain,
-	struct zone* zone, struct udb_ptr* z)
-{
-	nsec3_lookup_hash_and_wc(db, zone, z, domain_dname(domain), domain);
-}
-EOF
-cat >conftest2.c <<EOF
-#include <sys/types.h>
-#include <inttypes.h>
-#include <string.h>
-struct radtree;
-struct radnode;
-struct region;
-typedef uint16_t radstrlen_t;
-struct domain;
-struct radtree* radix_tree_create(void) { return (struct radtree*)malloc(10); }
-struct radnode* radix_insert(struct radtree* rt, uint8_t* k, radstrlen_t len,
-        void* elem) { (void)rt; (void)k; (void)len; (void)elem; return 0; }
-
-static struct radtree* hash_tree_create(void)
-{
-	struct radtree* tree = radix_tree_create();
-	(void)radix_insert(tree, NULL, 0, tree);
-	return tree;
-}
-
-void zone_add_domain_in_hash_tree(struct radtree** tree, uint8_t* hash,
-	size_t hashlen, struct domain* domain, struct radnode** node)
-{
-	if(!*tree) *tree = hash_tree_create();
-	*node = radix_insert(*tree, hash, hashlen, domain);
-}
-
-const struct dname *dname_parse(struct region *region, const char *name)
-{ (void)region; (void)name; return (struct dname*)malloc(10); }
-
-const struct dname *dname_concatenate(struct region *region,
-        const struct dname *left, const struct dname *right)
-{ (void)region; (void)left; return right; }
-
-struct udb_base;
-struct udb_ptr;
-#define NSEC3_HASH_LEN 20
-int udb_zone_lookup_hash_wc(struct udb_base* udb, struct udb_ptr* zone,
-        const uint8_t* nm, size_t nmlen, uint8_t hash[NSEC3_HASH_LEN],
-        uint8_t wchash[NSEC3_HASH_LEN])
-{ (void)udb; (void)zone; (void)nm; (void)hash; (void)wchash; return nmlen; }
-
-struct zone;
-void nsec3_hash_and_store(struct zone* zone, const struct dname* dname,
-        uint8_t* store) { (void)zone; (void)dname; (void)store; }
-
-int main(void) { return 0; }
-EOF
-]
-		if $CC $CFLAGS -o conftest.out -combine -fwhole-program conftest1.c conftest2.c >/dev/null 2>&1; then
-			AC_MSG_RESULT(yes)
-
-		AC_MSG_CHECKING([if -combine and system headers work (gentoo)])
-[
-cat >conftest1.c <<EOF
-#include <stdint.h>
-#include <stdlib.h>
-#include <string.h>
-
-struct radnode {
-	struct radnode* parent;
-	uint8_t pidx;
-	uint16_t len;
-	struct radsel* array; 
-};
-
-struct radtree {
-	struct radnode* root;
-};
-
-
-struct radsel {
-	uint8_t* str;
-	int len;
-	struct radnode* node;
-};
-
-
-static int
-radnode_cleanup_onechild(struct radnode* n, struct radnode* par)
-{
-	uint8_t* join = par->array->str;
-	uint8_t pidx = n->pidx;
-	memcpy(join, par->array[pidx].str, par->array[pidx].len);
-	memmove(join+par->array[pidx].len+1, n->array[0].str, n->array[0].len);
-	return 1;
-}
-
-static void
-radnode_array_clean_front(struct radnode* n)
-{
-	unsigned idx, shuf = 0;
-	memmove(&n->array[0], &n->array[shuf],
-		(n->len - shuf)*sizeof(struct radsel));
-	for(idx=0; idx<n->len; idx++)
-		if(n->array[idx].node)
-			n->array[idx].node->pidx = idx;
-}
-
-static void
-radnode_cleanup_leaf(struct radnode* par)
-{
-	radnode_array_clean_front(par);
-}
-
-static int
-radnode_cleanup(struct radnode* n)
-{
-	radnode_cleanup_onechild(n, n->parent);
-	radnode_cleanup_leaf(n->parent);
-	return 1;
-}
-
-void radix_delete(struct radnode* n)
-{
-	if(!radnode_cleanup(n)) { }
-}
-
-void
-radname_delete(struct radtree* rt)
-{
-	radix_delete(rt->root);
-}
-
-int main(void)
-{
-  return 0;
-}
-EOF
-cat >conftest2.c <<EOF
-#include <stdio.h>
-#include <string.h>
-
-struct radnode;
-struct radtree;
-void radix_delete(struct radnode* n);
-EOF
-]
-			if $CC $CFLAGS -o conftest.out -combine -fwhole-program conftest1.c conftest2.c >/dev/null 2>&1; then
-				AC_MSG_RESULT(yes)
-				CCWHOLE="whole"
-			else
-				AC_MSG_RESULT(no)
-				echo "failed command $CC $CFLAGS -o conftest.out -combine -fwhole-program conftest1.c conftest2.c" >&AS_MESSAGE_LOG_FD
-				$CC $CFLAGS -o conftest.out -combine -fwhole-program conftest1.c conftest2.c >&AS_MESSAGE_LOG_FD 2>&1
-				CCWHOLE="unwhole"
-			fi
-		else
-			AC_MSG_RESULT(no)
-			echo "failed command $CC $CFLAGS -o conftest.out -combine -fwhole-program conftest1.c conftest2.c" >&AS_MESSAGE_LOG_FD
-			$CC $CFLAGS -o conftest.out -combine -fwhole-program conftest1.c conftest2.c >&AS_MESSAGE_LOG_FD 2>&1
-			CCWHOLE="unwhole"
-		fi
-	else
-		AC_MSG_RESULT(no)
-		echo "failed command $CC $CFLAGS -o conftest.out -combine -fwhole-program conftest1.c conftest2.c" >&AS_MESSAGE_LOG_FD
-		$CC $CFLAGS -o conftest.out -combine -fwhole-program conftest1.c conftest2.c >&AS_MESSAGE_LOG_FD 2>&1
-		CCWHOLE="unwhole"
-	fi
-	rm -f conftest1.c conftest2.c conftest.out
-], [ CCWHOLE="unwhole" ])
-AC_SUBST(CCWHOLE)
+ACX_CHECK_FLTO
 AC_C_CONST
 AC_C_INLINE
 AC_TYPE_UID_T
