@@ -1,6 +1,8 @@
 25 January 2013: Wouter
 	- fix gcc warning, do not use uninit value for rng init.
 	- fix zonefiles-check: entry in nsd.conf
+	- remove -fwhole-program gcc flag usage.  We cannot reliably detect
+	  if it works without failure.
 
 23 January 2013: Wouter
 	- beta3
